--- a/Asana-Landing-Page/styles.css
+++ b/Asana-Landing-Page/styles.css
@@ -123,6 +123,21 @@ header {
   background-color: #f06a6a; /* Button hover background color */
 }
 
+.menu-toggle {
+  display: none;
+}
+
+@media (max-width: 768px) {
+  .container {
+      flex-direction: column;
+      align-items: flex-start;
+  }
+
+  .nav-links {
+      display: none;
+  }
+}
+
 /* Dropdown menu styles */
 /* .dropdown-menu {
     display: none;
