--- a/Asana-Landing-Page/styles.css
+++ b/Asana-Landing-Page/styles.css
@@ -153,7 +153,8 @@ header {
   }
   .dropdown-menu {
     position: absolute;
-    top: 100%;
+    top: 15%;
+    width: 100%;
     left: 0;
     background-color: #fff;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
@@ -197,13 +198,7 @@ header {
 .menu-toggle.open span:nth-child(3) {
     transform: translateY(-8px) rotate(-45deg);
 }
-.dropdown-menu {
-  display: none;
-}
 
-.dropdown-menu.show {
-  display: block;
-}
 
 }
 
