--- a/Asana-Landing-Page/styles.css
+++ b/Asana-Landing-Page/styles.css
@@ -122,28 +122,13 @@ header {
 .button:hover {
   background-color: #f06a6a; /* Button hover background color */
 }
+
 .menu-toggle{
   display: none;
 }
 
-/* .menu-toggle {
-  display: none;
-} */
-/* .menu-toggle {
-  display: block;
-  cursor: pointer;
 
-}
-
-.menu-toggle span {
-  display: block;
-  width: 25px;
-  height: 3px;
-  background-color: #fff;
-  margin-bottom: 5px;
-  transition: transform 0.3s ease;
-} */
-
+/* @media Query */
  @media (max-width: 1024px){
   .container1 p{
     font-size: 14px;
@@ -153,8 +138,9 @@ header {
   }
   .dropdown-menu {
     position: absolute;
-    top: 15%;
+    top: -200%;
     width: 100%;
+    height: 100%;
     left: 0;
     background-color: #fff;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
@@ -199,7 +185,33 @@ header {
     transform: translateY(-8px) rotate(-45deg);
 }
 
-
+}
+@media (max-width: 968px) {
+  .container1 p{
+    font-size: 11px;
+    margin-left: 8px;
+  }
+  .container1 li a{
+    font-size: 11px;
+    margin-left: 8px;
+  }
+  .container1 .diff-list .fa-times{
+    margin-left: 50px;
+  }
+  .container{
+    max-width: 600px;
+  }
+}
+@media (max-width: 650px){
+  .container1 {
+    display: block;
+  }
+  .user-actions .secondary{
+    display: none;
+  }
+  .container{
+    max-width: 400px;
+  }
 }
 
 /* @media (max-width: 768px) {
