--- a/Asana-Landing-Page/styles.css
+++ b/Asana-Landing-Page/styles.css
@@ -148,6 +148,69 @@ header {
   display: none;
 }
 
+/* Content */
+.content {
+  width: 100%;
+}
+
+.product-launch-plan {
+  background-color: #FFEAEC;
+  width: 90%;
+  border-radius: 10px;
+  margin: 0 auto 20px;
+}
+
+.launch-plan-text h2 {
+  font-size: 60px;
+  font-weight: 400;
+  line-height: 72px;
+  letter-spacing: -1px;
+  text-align: center;
+  padding-top: 70px;
+}
+
+.launch-plan-text p {
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 32px;
+  text-align: center;
+
+}
+
+.launch-plan-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 16px;
+  margin: 40px;
+}
+
+.launch-plan-btn .launch-plan-btn1 {
+  padding: 12px 25px 12px 25px;
+  gap: 0px;
+  border-radius: 3px 0px 0px 0px;
+  border: 1px 0px 0px 0px;
+  opacity: 0px;
+  background-color: #0d0e10;
+  color: white;
+}
+
+
+
+.launch-plan-btn .launch-plan-btn2 {
+  padding: 12px 25px 12px 25px;
+  gap: 0px;
+  border-radius: 3px 0px 0px 0px;
+  border: 1px 0px 0px 0px;
+  opacity: 0px;
+  color: #0d0e10;
+  background-color: #FFEAEC;
+}
+
+.launch-plan-img img {
+  width: 100%;
+}
+
 /* @media Query */
 @media (max-width: 1024px) {
   .container1 p {
