--- a/Asana-Landing-Page/styles.css
+++ b/Asana-Landing-Page/styles.css
@@ -230,11 +230,81 @@ header {
   opacity: 0px;
   padding: 24px;
 }
+
 /* different-department */
-.different-department{
+.different-department {
   width: 100%;
   background-color: #F5F3F3;
 }
+
+.department-asana {
+  width: 80%;
+  margin: 0 auto 20px;
+  padding-bottom: 40px;
+}
+
+.department-asana h3 {
+  font-size: 44px;
+  font-weight: 400;
+  line-height: 56px;
+  letter-spacing: -1px;
+  text-align: left;
+  padding-top: 60px;
+  padding-left: 25px;
+  padding-bottom: 25px;
+}
+
+.department-asana .department-asana-btn {
+  text-align: left;
+  padding-left: 30px;
+  padding-bottom: 25px;
+}
+
+.department-asana-btn button.active {
+  background-color: #FCE0DD;
+}
+
+.department-asana-btn button {
+  padding: 10px 20px;
+  gap: 0px;
+  border-radius: 50px;
+  border: none;
+  background-color: #fff;
+  opacity: 0px;
+}
+
+.department-asana-launch {
+  margin-left: 25px;
+  display: flex;
+  gap: 80px;
+}
+
+.department-asana-launch .department-asana-text h4 {
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 28px;
+  text-align: left;
+}
+
+.department-asana-launch .department-asana-text p {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 28px;
+  text-align: left;
+  margin-left: 12px;
+}
+
+.department-asana-text button {
+  padding: 12px 25px;
+  gap: 0px;
+  border-radius: 3px 0px 0px 0px;
+  margin-top: 15px;
+  border: 1px 0px 0px 0px;
+  opacity: 0px;
+  background-color: #0d0e10;
+  color: white;
+}
+
 /* @media Query */
 @media (max-width: 1024px) {
   .container1 p {
@@ -303,6 +373,8 @@ header {
     opacity: 0px;
     padding: 24px;
   }
+
+
 }
 
 @media (max-width: 968px) {
@@ -364,6 +436,7 @@ header {
     margin-left: 20px;
     font-size: 8px;
   }
+
   .product-launch-plan {
     background-color: #fff;
   }
@@ -432,7 +505,8 @@ header {
     margin-right: 5px;
     font-size: 17px;
   }
-  .launch-plan-btn .launch-plan-btn2{
+
+  .launch-plan-btn .launch-plan-btn2 {
     display: none;
   }
 }
