--- a/Asana-Landing-Page/styles.css
+++ b/Asana-Landing-Page/styles.css
@@ -238,7 +238,7 @@ header {
 }
 
 .department-asana {
-  width: 80%;
+  width: 90%;
   margin: 0 auto 20px;
   padding-bottom: 40px;
 }
@@ -253,9 +253,11 @@ header {
   padding-left: 25px;
   padding-bottom: 25px;
 }
-.department-asana form{
+
+.department-asana form {
   display: none;
 }
+
 .department-asana .department-asana-btn {
   text-align: left;
   padding-left: 30px;
@@ -283,7 +285,7 @@ header {
 
 .department-asana-launch .department-asana-text h4 {
   font-size: 20px;
-  font-weight: 500;
+  font-weight: 600;
   line-height: 28px;
   text-align: left;
 }
@@ -307,6 +309,65 @@ header {
   color: white;
   cursor: pointer;
 }
+
+/* What sets Asana apart */
+.con-asana-apart {
+  width: 100%;
+}
+
+.asana-apart {
+  width: 90%;
+  margin: 0 auto 20px;
+}
+
+.asana-apart h3 {
+  font-size: 44px;
+  font-weight: 400;
+  line-height: 56px;
+  letter-spacing: -1px;
+  text-align: left;
+  padding: 35px;
+}
+
+.asana-apart-text {
+  padding: 20px;
+}
+
+.asana-apart-text h4 {
+  font-size: 20px;
+  font-weight: 600;
+  line-height: 50px;
+  text-align: left;
+}
+
+.asana-apart-text p {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 28px;
+  text-align: left;
+  margin-bottom: 42px;
+}
+
+.asana-apart-text button {
+  padding: 12px 25px;
+  border-radius: 3px;
+  border: 1px solid rgb(90, 90, 90);
+  opacity: 0px;
+  font-size: 16px;
+  font-weight: 600;
+  background-color: #fff;
+}
+
+.asana-apart-launch img {
+width: 100%;
+}
+
+
+
+
+
+
+
 
 /* @media Query */
 @media (max-width: 1024px) {
@@ -376,16 +437,19 @@ header {
     opacity: 0px;
     padding: 24px;
   }
-  .department-asana{
+
+  .department-asana {
     width: 90%;
   }
 
-  .department-asana h3{
+  .department-asana h3 {
     font-size: 30px;
   }
-  .department-asana-launch img{
+
+  .department-asana-launch img {
     width: 65%;
   }
+
   .department-asana-launch .department-asana-text p {
     font-size: 12px;
   }
@@ -422,35 +486,62 @@ header {
     opacity: 0px;
     padding: 24px;
   }
-  .department-asana{
+
+  .department-asana {
     width: 80%;
   }
-  .department-asana h3{
+
+  .department-asana h3 {
     font-size: 25px;
   }
+
   .department-asana-btn button {
     padding: 6px 12px;
     font-size: 13px;
 
   }
+
   .department-asana-launch {
     gap: 22px;
   }
+
+  .department-asana-launch .department-asana-text h4 {
+    font-size: 16px;
+  }
+
+  .department-asana-launch .department-asana-text p {
+    font-size: 10px;
+  }
+
+  .department-asana-text button {
+    padding: 7px 10px;
+    font-size: 14px;
+  }
+  .asana-apart-text {
+    padding: 7px;
+  }
+  .asana-apart{
+    width: 90%;
+  }
+  .asana-apart-text h4 {
+    font-size: 13px;
+    font-weight: 700;
+  }
   
-.department-asana-launch .department-asana-text h4 {
-  font-size: 16px;
-}
+  .asana-apart-text p {
+    font-size: 12px;
+  }
+  
+  .asana-apart-text button {
+    padding: 10px 15px;
+    font-size: 12px;
+  }
+  .asana-apart-launch img {
+    width: 65%;
+  }
+  
 
-.department-asana-launch .department-asana-text p {
-  font-size: 10px;
-}
-
-.department-asana-text button {
-  padding: 7px 10px;
-  font-size: 14px;
-}
-
-/* 
+  /* 
   .department-asana h3{
     font-size: 30px;
   }
@@ -522,40 +613,48 @@ header {
     opacity: 0px;
     padding: 24px;
   }
-  .department-asana{
+
+  .department-asana {
     width: 90%;
 
   }
+
   .department-asana h3 {
     padding-left: 8px;
   }
-  .department-asana-launch{
+
+  .department-asana-launch {
     display: flex;
     flex-direction: column;
     margin-left: -0.00px;
   }
-  .department-asana-btn{
+
+  .department-asana-btn {
     display: none;
   }
-  .department-asana-launch img{
+
+  .department-asana-launch img {
     width: 100%;
   }
+
   .department-asana-launch .department-asana-text h4 {
     font-size: 18px;
   }
-  
+
   .department-asana-launch .department-asana-text p {
     font-size: 14px;
   }
-  
+
   .department-asana-text button {
     padding: 7px 10px;
     font-size: 14px;
   }
-  .department-asana form{
+
+  .department-asana form {
     display: block;
   }
-  .department-asana form #depart{
+
+  .department-asana form #depart {
     font-size: 16px;
     padding: 5px;
     border: 1px solid #ccc;
@@ -565,7 +664,8 @@ header {
     margin-left: 4px;
     margin-bottom: 25px;
   }
-  .department-asana form #depart option{
+
+  .department-asana form #depart option {
     padding: 10px;
   }
 }
@@ -609,14 +709,17 @@ header {
   .launch-plan-btn .launch-plan-btn2 {
     display: none;
   }
-  .fortune-img{
+
+  .fortune-img {
     display: flex;
     flex-direction: column;
   }
-  .department-asana form #depart{
+
+  .department-asana form #depart {
     width: 250px;
   }
-  .department-asana form #depart option{
+
+  .department-asana form #depart option {
     padding: 25px;
   }
 }
