--- a/Asana-Landing-Page/styles.css
+++ b/Asana-Landing-Page/styles.css
@@ -472,6 +472,54 @@ header {
   width: 40%;
 }
 
+.cont {
+  width: 100%;
+  background-color: #f5f3f3;
+}
+
+.card-container {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin-top: 50px;  
+  padding: 40px;             
+}
+
+.card {
+  width: 325px;
+  background-color: #fff;
+  border-radius: 2px;
+  overflow: hidden;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
+  margin: 20px;
+}
+
+.card img {
+  width: 100%;
+  height: auto;
+}
+
+.card-content {
+  padding: 16px;
+  background-color: white;
+}
+
+.card-content h3 {
+  font-size: 20px;
+  font-weight: 600;
+  line-height: 28px;
+  text-align: left;
+
+  margin-bottom: 8px;
+}
+
+.card-content p {
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 24px;
+  text-align: left;
+
+}
 
 /* @media Query */
 @media (max-width: 1024px) {
