--- a/Asana-Landing-Page/styles.css
+++ b/Asana-Landing-Page/styles.css
@@ -477,12 +477,36 @@ header {
   background-color: #f5f3f3;
 }
 
+.cont h1 {
+  margin-left: 18.5%;
+  padding-top: 30px;
+
+  font-size: 44px;
+  font-weight: 400;
+  line-height: 56px;
+  letter-spacing: -1px;
+  text-align: left;
+
+
+}
+
+.cont .para {
+  margin-left: 18.8%;
+  margin-top: 25px;
+
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 28px;
+  text-align: left;
+
+}
+
 .card-container {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  margin-top: 50px;  
-  padding: 40px;             
+  margin-top: 50px;
+  padding: 40px;
 }
 
 .card {
