--- a/Asana-Landing-Page/styles.css
+++ b/Asana-Landing-Page/styles.css
@@ -487,7 +487,6 @@ header {
   letter-spacing: -1px;
   text-align: left;
 
-
 }
 
 .cont .para {
@@ -505,8 +504,8 @@ header {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  margin-top: 50px;
-  padding: 40px;
+  margin: 0 auto 20px;
+  width: 95%;
 }
 
 .card {
@@ -514,10 +513,9 @@ header {
   background-color: #fff;
   border-radius: 2px;
   overflow: hidden;
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
   margin: 20px;
-}
 
+}
 .card img {
   width: 100%;
   height: auto;
@@ -526,6 +524,7 @@ header {
 .card-content {
   padding: 16px;
   background-color: white;
+  /* box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2); */
 }
 
 .card-content h3 {
@@ -545,6 +544,12 @@ header {
 
 }
 
+.cont-2{
+  background-color: white;
+}
+.cont-2 h1{
+  padding-top: 60px;
+}
 /* @media Query */
 @media (max-width: 1024px) {
   .container1 p {
