--- a/Asana-Landing-Page/styles.css
+++ b/Asana-Landing-Page/styles.css
@@ -547,9 +547,6 @@ header {
 
 }
 
-.start-easily {
-  width: '';
-}
 
 .start-container {
   width: 100%;
@@ -560,7 +557,8 @@ header {
 
 .start-container h1 {
   width: 85%;
-  margin: 0 auto 20px;
+  margin: 0 auto 0px;
+  margin-top: 60px;
 
   font-size: 44px;
   font-weight: 400;
@@ -604,6 +602,33 @@ header {
   margin-top: 20px;
 }
 
+.under-text{
+  width: 80%;
+  align-items: center;
+  text-align: center;
+  margin: 0 auto 20px;
+  padding: 50px;
+}
+.under-text h1{
+font-size: 60px;
+font-weight: 400;
+line-height: 56px;
+letter-spacing: -1px;
+text-align: center;
+
+}
+.under-text button{
+padding: 12px 25px;
+gap: 0px;
+border-radius: 3px;
+border: 1px solid #000;
+background-color: black;
+color: #fff;
+font-size: 18px;
+margin-top: 30px;
+opacity: 0px;
+
+}
 /* @media Query */
 @media (max-width: 1024px) {
   .container1 p {
@@ -855,6 +880,9 @@ header {
     padding-left: 85px;
 
   }
+  .under-text h1{
+    font-size: 55px;    
+    }
 
   /* 
   .department-asana h3{
@@ -1033,6 +1061,12 @@ header {
     padding-left: 35px;
 
   }
+  .under-text{
+    width: 90%;
+  }
+  .under-text h1{
+    font-size: 44px;    
+    }
 }
 
 @media (max-width: 470px) {
