--- a/Asana-Landing-Page/styles.css
+++ b/Asana-Landing-Page/styles.css
@@ -665,7 +665,7 @@ header {
 .fore-footer .fore-text p a:hover {
   color: #b41522;
 }
-
+.
 /* @media Query */
 @media (max-width: 1024px) {
   .container1 p {
