--- a/Asana-Landing-Page/styles.css
+++ b/Asana-Landing-Page/styles.css
@@ -680,28 +680,70 @@ footer {
   flex-direction: column;
   margin: 40px;
 }
-.footer-links p{
+
+.footer-links p {
   font-size: 16px;
   color: #A5A4A3;
   margin-bottom: 40px;
 }
+
 .footer-links a {
   margin-bottom: 20px;
   text-decoration: none;
   color: #fff;
   font-size: 16px;
   font-weight: 600;
- line-height: 24.5px;
+  line-height: 24.5px;
 }
 
-.footer-links a:hover{
+.footer-links a:hover {
   text-decoration: underline;
 }
-.finish-footer{
-  background-color:#2A2B2C;
+
+.finish-footer {
+  background-color: #2A2B2C;
+}
+
+.finish-foot {
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
+  margin: 0 auto 0;
+  padding: 20px;
+}
+
+.finish-foot div {
+  margin-left: 100px;
+}
+
+.foot-img-text {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.foot-img-text p {
+  margin-left: 5px;
+  color: #fff;
+}
+
+.finish-foot .foot-text p {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24.5px;
+  text-align: left;
+  color: #fff;
+}
+.fo-links p {
+  color: white;
+ }
+.fo-links p a{
+ color: white;
+ text-decoration: none;
+}
+.fo-links p a:hover{
+  text-decoration: underline;
 }
 /* @media Query */
 @media (max-width: 1024px) {
@@ -845,6 +887,10 @@ footer {
   .integrations-contain img {
     width: 40%;
   }
+  
+  .finish-foot div {
+    margin-left: 30px;
+  }
 }
 
 @media (max-width: 968px) {
@@ -957,13 +1003,20 @@ footer {
   .under-text h1 {
     font-size: 55px;
   }
-  .footer-links p{
+
+  .footer-links p {
     font-size: 14px;
   }
+
   .footer-links a {
     font-size: 14px;
   }
- 
+  .finish-foot {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+  }
+
 }
 
 @media (max-width: 650px) {
@@ -1141,12 +1194,15 @@ footer {
     font-size: 40px;
     margin: 20px;
   }
-  .main-foot{
+
+  .main-foot {
     width: 100%;
   }
-  .footer-links p{
+
+  .footer-links p {
     font-size: 12px;
   }
+
   .footer-links a {
     font-size: 12px;
   }
