--- a/Asana-Landing-Page/styles.css
+++ b/Asana-Landing-Page/styles.css
@@ -755,18 +755,34 @@ footer {
     max-width: 900px;
   }
 
-  .dropdown-menu {
+  .dropdown-menu{
+    display: none;
+    width: 100%;
+    text-align: start;
+  }
+  .dropdown-menu ul{
+    flex-direction: column;
+  }
+  .dropdown-menu li{
+    margin: 15px 0;
+  }
+  .dropdown-menu.active{
+    display: flex;
+    flex-direction: column;
+  }
+  /* .dropdown-menu {
     position: absolute;
-    top: -200%;
+    top: 00%;
     width: 100%;
     height: 100%;
     left: 0;
     background-color: #fff;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     z-index: 1000;
-  }
+    margin-top: 40px;
+  } */
 
-  .container .dropdown-menu li {
+  /* .container .dropdown-menu li {
     display: block;
     margin-bottom: 40px;
     margin-top: 25px;
@@ -778,7 +794,7 @@ footer {
     margin-left: 15px;
     font-size: 15px;
     color: black;
-  }
+  } */
 
   .menu-toggle {
     display: block;
@@ -794,19 +810,7 @@ footer {
     transition: transform 0.3s ease;
   }
 
-  .menu-toggle.open span:nth-child(1) {
-    transform: translateY(8px) rotate(45deg);
-  }
-
-  .menu-toggle.open span:nth-child(2) {
-    opacity: 0;
-  }
-
-  .menu-toggle.open span:nth-child(3) {
-    transform: translateY(-8px) rotate(-45deg);
-  }
-
-  .fortune-img img {
+   .fortune-img img {
     width: Hug (100px) px;
     height: Hug (80px) px;
     gap: 0px;
